--- a/VelascoJavascriptTasks123.html
+++ b/VelascoJavascriptTasks123.html
@@ -1,5 +1,5 @@
 <body>
-  <h1>Click anywhere!</h1>
+  <h1>CLick anywhere! :)</h1>
   <h2>Press any key</h2>
   Refresh page to reset
   <p id = "outputHEH"></p>
