--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   </body>
   <style>
     #linksHEHE {
-      color: mintcream;
       font-size:30px;
+      text-align: center;
+      transition: scale(1.2);
+      transform: all 0.5s ease;
     }
     body {
       background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20190828/pngtree-design-background-of-person-working-on-his-computer-in-top-view-image_307725.jpg');
